# multilinear-map-cryptography

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  README.md
benches/: prover_bench.rs
examples/: benchmark.rs  comprehensive_benchmarks.rs  demo.rs
src/: benchmarks.rs  commitments.rs  lib.rs  polynomials.rs  shout.rs  sumcheck.rs  twist.rs  utils.rs
tests/: integration_tests.rs  polynomial_tests.rs  production_tests.rs  shout_tests.rs  twist_tests.rs
